[gd_scene load_steps=12 format=2]

[ext_resource path="res://source/menus/player_join/player_join.gd" type="Script" id=1]
[ext_resource path="res://source/player_data/inactive.tres" type="Resource" id=2]
[ext_resource path="res://source/player_data/player_2.tres" type="Resource" id=3]
[ext_resource path="res://source/player_data/player_4.tres" type="Resource" id=4]
[ext_resource path="res://source/player_data/player_3.tres" type="Resource" id=5]
[ext_resource path="res://source/player_data/player_1.tres" type="Resource" id=6]
[ext_resource path="res://assets/art/player_join.png" type="Texture" id=7]
[ext_resource path="res://assets/themes/theme.tres" type="Theme" id=8]
[ext_resource path="res://source/menus/player_join/player_pane.tscn" type="PackedScene" id=13]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "start_game"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 12.1257, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 100, 100 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "__start_game"
} ]
}

[node name="player_join" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
mouse_filter = 2
theme = ExtResource( 8 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/start_game = SubResource( 2 )

[node name="background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_1_pane" parent="." instance=ExtResource( 13 )]
margin_left = 61.0
margin_top = 100.0
margin_right = 320.0
margin_bottom = 609.0
inactive_data = ExtResource( 2 )
active_data = ExtResource( 6 )

[node name="player_2_pane" parent="." instance=ExtResource( 13 )]
margin_left = 360.0
margin_top = 100.0
margin_right = 619.0
margin_bottom = 609.0
inactive_data = ExtResource( 2 )
active_data = ExtResource( 3 )

[node name="player_3_pane" parent="." instance=ExtResource( 13 )]
margin_left = 660.0
margin_top = 100.0
margin_right = 919.0
margin_bottom = 609.0
inactive_data = ExtResource( 2 )
active_data = ExtResource( 5 )

[node name="player_4_pane" parent="." instance=ExtResource( 13 )]
margin_left = 960.0
margin_top = 100.0
margin_right = 1219.0
margin_bottom = 609.0
inactive_data = ExtResource( 2 )
active_data = ExtResource( 4 )

[node name="back" type="Button" parent="."]
margin_left = 408.0
margin_top = 632.0
margin_right = 575.0
margin_bottom = 692.0
rect_pivot_offset = Vector2( 83, 30 )
theme = ExtResource( 8 )
disabled = true
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="."]
margin_left = 704.0
margin_top = 632.0
margin_right = 871.0
margin_bottom = 692.0
rect_pivot_offset = Vector2( 83, 30 )
theme = ExtResource( 8 )
disabled = true
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="information" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -325.0
margin_top = 43.0
margin_right = 326.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 325, 12 )
text = "Inactive players will spawn as AI"
__meta__ = {
"_edit_use_anchors_": false
}
